clusters/work/infra/config/kyverno/harbor-mutate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: harbor-default-securitycontext
spec:
  background: true
  rules:
  - name: set-pod-and-container-securitycontext
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - harbor
    mutate:
      patchStrategicMerge:
        spec:
          +(securityContext):
            +(runAsNonRoot): true

          containers:
          - (name): "*"
            +(securityContext):
              +(runAsNonRoot): true
              +(allowPrivilegeEscalation): false
              +(capabilities):
                +(drop):
                - ALL

          +(initContainers):
          - (name): "*"
            +(securityContext):
              +(runAsNonRoot): true
              +(allowPrivilegeEscalation): false
              +(capabilities):
                +(drop):
                - ALL
