clusters/work/infra/config/kyverno/harbor-trivy-securitycontext.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: harbor-trivy-securitycontext
spec:
  background: true
  rules:
    - name: set-trivy-securitycontext
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - harbor
              selector:
                matchLabels:
                  app: harbor
                  component: trivy
      mutate:
        patchStrategicMerge:
          spec:
            +(securityContext):
              +(runAsNonRoot): true
              +(seccompProfile):
                +(type): RuntimeDefault
            containers:
              - (name): "*"
                +(securityContext):
                  +(runAsNonRoot): true
                  +(allowPrivilegeEscalation): false
                  +(capabilities):
                    +(drop):
                      - ALL
